--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -9,16 +9,20 @@ platforms:
     box: opscode-ubuntu-12.04
     box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_ubuntu-12.04_chef-provisionerless.box
   run_list:
-  - recipe[rackspace_gluster]
+  - recipe[rackspace_apt]
 - name: centos-6.4
   driver_config:
     box: opscode-centos-6.4
     box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_centos-6.4_chef-provisionerless.box
-  run_list:
-  - recipe[rackspace_gluster]
 - name: debian-7.2.0
   driver_config:
     box: opscode-debian-7.2.0
     box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_debian-7.2.0_chef-provisionerless.box
   run_list:
-  - recipe[rackspace_gluster]
+  - recipe[rackspace_apt]
+
+suites:
+  - name: default
+    run_list:
+      - recipe[rackspace_gluster::default]
+
