--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -9,13 +9,13 @@ platforms:
     box: opscode-ubuntu-12.04
     box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_ubuntu-12.04_chef-provisionerless.box
   run_list:
-  - recipe[rackspace_apt]
+  - recipe[apt]
 - name: debian-7.2.0
   driver_config:
     box: opscode-debian-7.2.0
     box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_debian-7.2.0_chef-provisionerless.box
   run_list:
-  - recipe[rackspace_apt]
+  - recipe[apt]
 
 suites:
   - name: default
