--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -22,6 +22,12 @@ platforms:
     box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_centos-6.5_chef-provisionerless.box
   run_list:
   - recipe[yum]
+- name: centos-7.0
+  driver_config:
+    box: opscode-centos-7.0
+    box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_centos-7.0_chef-provisionerless.box
+  run_list:
+  - recipe[yum]
 
 suites:
   - name: default
