--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,9 @@
+# Rubocop,  we're buddies and all,  but we're going to have to disagree on the following -
+
+# Disable ABC, it's not needed in chef
+AbcSize:
+  Enabled: false
+
 # Disable requirement of "encoding" headers on files
 Encoding:
   Enabled: false
@@ -23,7 +29,20 @@ IfUnlessModifier:
 # Raise allowed CyclomaticComplexity to 10.
 CyclomaticComplexity:
   Max: 10
-  
+
 # Disable Single Space before first arg
 SingleSpaceBeforeFirstArg:
   Enabled: false
+
+# Don't force a word array unless 5 elements
+WordArray:
+  MinSize: 5
+
+# Don't complain about unused block args
+UnusedBlockArgument:
+  Enabled: false
+
+AllCops:
+  Include:
+    - '**/metadata.rb'
+    - '**/*.rb'
